style.css
* {
    box-sizing: border-box;
}
html, body {
    height: 100%; /*Makes the page fit 100% of screen*/
    width:100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border: solid pink 3px;
    background-color:rgb(13, 35, 54);
}

img {
    height:100%;
    width:100%;
}

.main {
    height:100%;
    width: 100%;
}
.options-menu {
    border: solid black 3px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 33%;
   
    gap:50px;
}

.option {
    text-align: center;
    color:white;
    padding:30px;
    width: 200px;
 
}

.option img {
    border: solid purple 3px;
    border-radius: 100%;
}

#startingText {
    border: solid orange 3px;
    height: 33%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.btnStyle  {
    width:150px;
    align-self: center;
    padding: 10px;
}

#header {
    color:white;
    font-family: "Rubik Iso", serif;
    font-weight: 400;
    font-style: normal;
    font-size: 48px;
}

.playTxt {
    color:white;
    height:33%;
    font-size: 22px;
    display:flex;
    flex-direction: column;
    border: solid turquoise 3px;
}

.person {
    border: solid red 3px;
    display: flex;
    flex-direction: column;
    align-items: baseline;
    padding:25px;
  
 
}

.person h4 {
    margin: 0;  
    font-size: 25px;
    margin-bottom: 5px;
}


.score {
    font-size: 22px;
    color:white;
    display:flex;
    border:solid pink 3px;
    flex-direction: row;
    justify-content: center;
    gap: 10px;

}

.score-display {
    border-radius: 5px;
    padding: 15px;
    text-align: center;
    background-color:azure;
    color:black;
    font-family: "Orbitron", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 35px;
    width: 175px;
}

#moveTxt {
    text-align: center;
    margin: 0;
}

.options-Container {
    border:solid yellow 3px;
    color:white;
    font-size: 22px;
}

